# thruster-basic-template

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/layouts/: default.rs
src/routes/: basicjson.rs  index.rs  mod.rs  p404.rs  plaintext.rs  root.rs
src/views/: index.rs  mod.rs  p404.rs
tests/: routes.rs
